90% all web version

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/bkb.png" />
 
   <!-- Bootstrap Stylesheet -->
@@ -39,6 +39,7 @@
 </head>
 
 <body>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
